[metadata]
name = pysinger
version = 0.0.3
description = Singer python wrapper for easy execution
license = MIT
author = Izzudin Hafiz
author_email = izzudin.hafiz@gmail.com
url = https://github.com/izzudinhafiz/pysinger
classifiers =
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
